--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,8 @@ jobs:
                       django-version: 4.1
                     - python-version: 3.7
                       django-version: 4.2
+                    - python-version: 3.11
+                      django-version: 3.2
 
         steps:
             - uses: actions/checkout@v3
