--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,18 @@ envlist =
 
 [testenv]
 deps =
-    django{32,40,41,42}: Django=={env:DJANGO_VERSION}
-    drf{312,313,314}: djangorestframework=={env:DRF_VERSION}
-    pytest>=8.0.0
+    django32: Django>=3.2,<4.0
+    django40: Django>=4.0,<4.1
+    django41: Django>=4.1,<4.2
+    django42: Django>=4.2,<5.0
+    drf312: djangorestframework>=3.12.0,<3.13.0
+    drf313: djangorestframework>=3.13.0,<3.14.0
+    drf314: djangorestframework>=3.14.0,<3.15.0
+    py37: pytest<8.0.0
+    py{38,39,310,311}: pytest>=8.0.0
     pytest-django>=4.0.0
-    pytest-cov>=6.0.0
-    django-filter>=23.0.0
+    pytest-cov>=4.1.0,<5.0.0
+    django-filter>=22.1,<23.0
 
 commands =
     python -m pytest --cov=drf_aggrid tests/ --cov-report=term-missing
