--- a/tox.ini
+++ b/tox.ini
@@ -1,29 +1,24 @@
 [tox]
 envlist =
-    py{37,38,39,310,311}-django{32,40,41,42}-drf{312,313,314}
+    py{38,39,310,311,312}-django{42,50}-drf314
 
 [testenv]
 deps =
-    django32: Django>=3.2,<4.0
-    django40: Django>=4.0,<4.1
-    django41: Django>=4.1,<4.2
     django42: Django>=4.2,<5.0
-    drf312: djangorestframework>=3.12.0,<3.13.0
-    drf313: djangorestframework>=3.13.0,<3.14.0
+    django50: Django>=5.0,<5.1
     drf314: djangorestframework>=3.14.0,<3.15.0
-    py37: pytest<8.0.0
-    py{38,39,310,311}: pytest>=8.0.0
+    pytest>=8.0.0
     pytest-django>=4.0.0
-    pytest-cov>=4.1.0,<5.0.0
-    django-filter>=22.1,<23.0
+    pytest-cov>=4.1.0
+    django-filter>=23.0
 
 commands =
     python -m pytest --cov=drf_aggrid tests/ --cov-report=term-missing
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
-    3.11: py311 
+    3.11: py311
+    3.12: py312 
