--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,15 +11,9 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-                django-version: ["4.2", "5.1"]
+                python-version: ["3.9", "3.10", "3.11", "3.12"]
+                django-version: ["4.2"]
                 drf-version: ["3.14.0"]
-                exclude:
-                    # Django 5.1 requires Python 3.10+
-                    - python-version: "3.8"
-                      django-version: "5.1"
-                    - python-version: "3.9"
-                      django-version: "5.1"
 
         steps:
             - uses: actions/checkout@v3
