--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,22 @@
 [tox]
 envlist =
-    py{37,38,39,310,311}-django{32,40,41,42}-drf{312,313,314}
+    py{39,310,311,312}-django{42}-drf314
 
 [testenv]
 deps =
-    django{32,40,41,42}: Django=={env:DJANGO_VERSION}
-    drf{312,313,314}: djangorestframework=={env:DRF_VERSION}
+    django42: Django>=4.2,<4.3
+    drf314: djangorestframework>=3.14.0,<3.15.0
     pytest>=8.0.0
     pytest-django>=4.0.0
-    pytest-cov>=6.0.0
-    django-filter>=23.0.0
+    pytest-cov>=4.1.0
+    django-filter>=23.0
 
 commands =
     python -m pytest --cov=drf_aggrid tests/ --cov-report=term-missing
 
 [gh-actions]
 python =
-    3.7: py37
-    3.8: py38
     3.9: py39
     3.10: py310
-    3.11: py311 
+    3.11: py311
+    3.12: py312 
